--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
   php:
     build: ./php
     ports:
-      - 8000:80
+      - 8200:80
     restart: always
     volumes:
       - ./container_data/log:/var/log/apache2
-      - ./html:/var/www/html
+      - ./desktophero:/var/www/html
     depends_on:
       db:
         condition: service_healthy
@@ -31,7 +31,7 @@ services:
       - PMA_ARBITRARY=1
     restart: always
     ports:
-      - 8080:80
+      - 8280:80
     volumes:
       - /sessions
     depends_on:
