--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "desktophero"]
 	path = desktophero
-	url = git@github.com:stockto2/desktophero.git
+	url = https://github.com/cioddi/desktophero_docker.git
